--- a/pdgtclient.csproj
+++ b/pdgtclient.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GtkSharp" Version="3.22.25.*" />
+    <PackageReference Include="GtkSharp" Version="3.22.25.125" />
     <PackageReference Include="newtonsoft.json" Version="12.0.3" />
   </ItemGroup>
 
